--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 
     <section class="flex flex-col-reverse md:flex-row gap-10 justify-between items-center py-5 w-11/12 mx-auto">
         <div class="content  flex-1 text-center md:text-left">
-            <h2 class="text-4xl font-bold mb-8"><span class="text-sky-500">English</span> is easy !!</h2>
-            <p class="font-bangla">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা আপনার দক্ষতা বাড়াতে
+            <h2 class="text-5xl font-bold mb-8"><span class="text-sky-500">English</span> is easy !!</h2>
+            <p class="font-bangla text-2xl">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা <br> আপনার দক্ষতা বাড়াতে
                 চান, আমাদের
-                Interactive Lessons আপনাকে নিয়ে যাবে অন্য একটি Level এ</p>
+                Interactive Lessons আপনাকে নিয়ে <br> যাবে অন্য একটি Level এ</p>
         </div>
-        <div class="image ">
+        <div class="image  ">
             <img src="./assets/hero-student.png" alt="">
         </div>
     </section>
@@ -100,7 +100,11 @@
         </div>
     </section>
 
-    <section id="word-container" class="p-10 w-11/12 mx-auto my-10 grid grid-cols-3 gap-5">
+    <section id="word-container" class="p-10 w-11/12 mx-auto my-10 grid grid-cols-1 md:grid-cols-3  gap-5 bg-[#F8F8F8] rounded-2xl">
+        <div class="text-center bg-[#F8F8F8] col-span-full  py-10 space-y-6 font-bangla">
+            <p class="text-xl text-[24px] text-[#79716B]">আপনি এখনো কোন Lesson Select করেন নি</p>
+            <h2 class="font-bold text-4xl text-[#292524]">একটি Lesson Select করুন।</h2>
+        </div>
 
     </section>
     <script src="./script.js"></script>
