added search and load animation

--- a/index.html
+++ b/index.html
@@ -100,6 +100,27 @@
         </div>
     </section>
 
+<!-- search section -->
+    <section class="flex justify-center py-8">
+<div class="join">
+  <div>
+    <label class="input validator join-item">
+
+      <input id="input-search" type="text" placeholder="Search Vocabulary Now" required />
+    </label>
+  </div>
+  <button id="btn-search" class="btn btn-primary join-item">Search</button>
+</div>
+    </section>
+
+
+<!-- loading animation -->
+<section id="load_ani" class="flex justify-center items-center py-10 hidden">
+    <span class="loading loading-bars loading-xl"></span>
+</section>
+
+
+
     <section id="word-container" class="p-10 w-11/12 mx-auto my-10 grid grid-cols-1 md:grid-cols-3  gap-5 bg-[#F8F8F8] rounded-2xl">
         <div class="text-center bg-[#F8F8F8] col-span-full  py-10 space-y-6 font-bangla">
             <p class="text-xl text-[24px] text-[#79716B]">আপনি এখনো কোন Lesson Select করেন নি</p>
